--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Dayton Demo</title>
+    <title>Just a stylesheet</title>
     <link rel="stylesheet" href="../src/dayton.scss" />
   </head>
   <body>
