add github link

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,11 @@
         be used with any frontend or backend framework.
       </p>
 
+      <p>
+        The source for this site can be found on
+        <a href="https://github.com/ievavold/dayton">GitHub</a>.
+      </p>
+
       <h2>Typography</h2>
 
       <p>
