--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Dayton Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
