--- a/demo/index.html
+++ b/demo/index.html
@@ -110,7 +110,7 @@
           <option value="nidoran">Nidoran</option>
           <option value="nidorina">Nidorina</option>
           <option value="nidoqueen">Nidoqueen</option>
-          <option value="nidoran♂">Nidoran♂</option>
+          <option value="nidoran">Nidoran</option>
           <option value="nidorino">Nidorino</option>
           <option value="nidoking">Nidoking</option>
           <option value="clefairy">Clefairy</option>
